# hello-rocket

./: .env  Cargo.toml  Rocket.toml
migrations/2019-11-24-120934_create_quiz/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
