[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Bjørnar Dalsnes <bjornar.dalsnes@knowit.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.0", features = ["json", "diesel_postgres_pool"] }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
rand = "0.7.2"
